# xcowsay

./: .gitignore  AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.old  NEWS  README  config.h.in  configure.ac  display_cow.c  display_cow.h  floating_shape.c  floating_shape.h  settings.c  settings.h  test.sh  xcowat  xcowfortune  xcowsay.6  xcowsay.c  xcowsayd.c  xcowsayd.h  xcowsend
Formula/: xcowsay.rb
debian/: Makefile.am  changelog  control  copyright  emacsen-install.ex  emacsen-remove.ex  emacsen-startup.ex  files  init.d.lsb.ex  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules  watch  xcowsay-default.ex  xcowsay.substvars
m4/: ChangeLog
po/: ChangeLog  LINGUAS  Makevars  POTFILES.in  de_DE.po  en_GB.po  pt_BR.po  ru.po  xcowsay.pot  xcowsay_applet.pot
src/: CowsayApplet.server.in  Cowsay_glue.h  Makefile.am  applet.c  bubblegen.c  config_file.c  config_file.h  cowsay.xml  display_cow.c  display_cow.h  floating_shape.c  floating_shape.h  i18n.h  settings.c  settings.h  xcowdream  xcowsay.c  xcowsayd.c  xcowthink
